changed file hierarchy and added a proper Login servlet and BankManager POJO

--- a/WebContent/createAccount.html
+++ b/WebContent/createAccount.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Create Account</title>
 </head>
 <body>
 
-<form>
+<form action="CreateAccount" method="post">
 
 Enter a username: <input type="text" name="username" /><br/>
 Enter a password: <input type="password" name="password" /><br/>
