--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,7 +8,7 @@
 
 <h1>Welcome to JoshBank!</h1>
 
-<form action="BankManager" method="post">
+<form action="Login" method="post">
 
 Username: <input type="text" name="username" /><br/>
 Password: <input type="password" name="password" /><br/>
