tested some things out that didn't work. gonna need to learn jsp's before creating proper home pages for accounts

--- a/WebContent/createAccount.html
+++ b/WebContent/createAccount.html
@@ -10,7 +10,7 @@
 
 Enter a username: <input type="text" name="username" /><br/>
 Enter a password: <input type="password" name="password" /><br/>
-Confirm your password: <input type="password" name="password" /><br/>
+Confirm your password: <input type="password" name="confirmpassword" /><br/>
 
 <input type="submit" value="Create Account" />
 
